--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,7 @@ project (BasicRT3 VERSION 1.0.0 LANGUAGES CXX )
 # Set "manually" paths that need to be considered while compiling/linking
 include_directories( cameras
                      integrators
+                     materials
                      core
                      ext )
 
@@ -21,6 +22,7 @@ file( GLOB SOURCE_BASICRT3 ${RT3_SOURCE_DIR}/cameras/*.cpp
                            ${RT3_SOURCE_DIR}/ext/*.cpp
                            ${RT3_SOURCE_DIR}/integrators/*.cpp
                            ${RT3_SOURCE_DIR}/main/*.cpp
+                           ${RT3_SOURCE_DIR}/materials/*.cpp
                         )
 add_executable(basic_rt3 ${SOURCE_BASICRT3})
 
