moved sphere to dedicated shapes directory

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,7 @@ include_directories( cameras
                      integrators
                      materials
                      lights
+                     shapes
                      core
                      ext )
 
@@ -25,6 +26,7 @@ file( GLOB SOURCE_BASICRT3 ${RT3_SOURCE_DIR}/cameras/*.cpp
                            ${RT3_SOURCE_DIR}/main/*.cpp
                            ${RT3_SOURCE_DIR}/materials/*.cpp
                            ${RT3_SOURCE_DIR}/lights/*.cpp
+                           ${RT3_SOURCE_DIR}/shapes/*.cpp
                         )
 add_executable(basic_rt3 ${SOURCE_BASICRT3})
 
