mesh dir to cmake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,7 @@ include_directories( cameras
                      lights
                      shapes
                      core
+                     mesh
                      ext )
 
 #=== SETTING VARIABLES ===#
@@ -22,11 +23,13 @@ set( RT3_SOURCE_DIR "src" )
 file( GLOB SOURCE_BASICRT3 ${RT3_SOURCE_DIR}/cameras/*.cpp
                            ${RT3_SOURCE_DIR}/core/*.cpp
                            ${RT3_SOURCE_DIR}/ext/*.cpp
+                           ${RT3_SOURCE_DIR}/ext/*.cc
                            ${RT3_SOURCE_DIR}/integrators/*.cpp
                            ${RT3_SOURCE_DIR}/main/*.cpp
                            ${RT3_SOURCE_DIR}/materials/*.cpp
                            ${RT3_SOURCE_DIR}/lights/*.cpp
                            ${RT3_SOURCE_DIR}/shapes/*.cpp
+                           ${RT3_SOURCE_DIR}/mesh/*.cpp
                         )
 add_executable(basic_rt3 ${SOURCE_BASICRT3})
 
