--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,11 +10,12 @@ include_directories( cameras
                      shapes
                      core
                      mesh
+                     api
                      ext )
 
 #=== SETTING VARIABLES ===#
 # Compiling flags
-set( GCC_COMPILE_FLAGS "-Wall" )
+set( GCC_COMPILE_FLAGS "-Wall -g" )
 set( CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} ${GCC_COMPILE_FLAGS}" )
 set( RT3_SOURCE_DIR "src" )
 
@@ -30,6 +31,7 @@ file( GLOB SOURCE_BASICRT3 ${RT3_SOURCE_DIR}/cameras/*.cpp
                            ${RT3_SOURCE_DIR}/lights/*.cpp
                            ${RT3_SOURCE_DIR}/shapes/*.cpp
                            ${RT3_SOURCE_DIR}/mesh/*.cpp
+                           ${RT3_SOURCE_DIR}/api/*.cpp
                         )
 add_executable(basic_rt3 ${SOURCE_BASICRT3})
 
